k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kfp-metrics-collector
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /kfp-metrics-collector/
      rewrite:
        uri: /
      route:
        - destination:
            host: kfp-metrics-collector.kubeflow.svc.cluster.local
            port:
              number: 8080
      timeout: 300s
