k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kfp-metrics-collector
  namespace: kubeflow
spec:
  rules:
    - from:
        - source:
            namespaces:
              - istio-system
  selector:
    matchLabels:
      app: kfp-metrics-collector
